# par2-rs

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
src/: cli.rs  error.rs  file.rs  file_name.rs  galois.rs  main.rs  packet.rs  set.rs  verify.rs
src/cli/: create.rs  repair.rs  verify.rs
src/packet/: creator.rs  file_desc.rs  header.rs  main.rs  recovery_slice.rs  slice_checksum.rs
