[package]
name = "par2"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
crc32fast = "1.5.0"
env_logger = "0.11.9"
glob = "0.3.3"
hex = "0.4.3"
log = "0.4.29"
md-5 = "0.10.6"

[dev-dependencies]
tempfile = "3.26.0"
